# ojt-system

./: .gitignore
backend/: .gitignore  my_app_template.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/src/api/v1/: __init__.py  v1_auth_api.py  v1_user_api.py
backend/app/src/core/: constants.py  dependencies.py  security.py
backend/app/src/database/: __init__.py  uow.py
backend/app/src/database/models/: __init__.py  timein_out_model.py  user_information.py  user_model.py
backend/app/src/database/repositories/: user_repository.py
backend/app/src/domain/dto/: users_dto.py
backend/app/src/domain/interface/: aql_crud_interface.py
backend/app/src/exceptions/: __init__.py  domain_exceptions.py  exceptions_mapper.py  http_exceptions.py
backend/app/src/schema/: __init__.py  user_schema.py
backend/app/src/services/: __init__.py  auth_services.py  user_services.py
backend/app/src/utils/: __init__.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/migration/: env.py
backend/migration/versions/: d5430a81412b_first_init.py
backend/migrations/: env.py
backend/migrations/versions/: 10a2f09d06b4_first_migrate.py
client/: package-lock.json  package.json  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  providers.tsx
client/src/app/admin/: layout.tsx  page.tsx
client/src/app/admin/activity-logs/: page.tsx
client/src/app/admin/create-user/: page.tsx
client/src/app/admin/dashboard/: page.tsx
client/src/app/admin/student-list/: page.tsx
client/src/app/auth/login/: page.tsx
client/src/app/users/: layout.tsx
client/src/app/users/dashboard/: page.tsx
client/src/app/users/schedule/: page.tsx
client/src/app/users/user-profile/: page.tsx
client/src/components/layout/: Header.tsx  Sidebar.tsx  UserSidebar.tsx
client/src/components/ui/: Card.tsx  Modal.tsx
client/src/context/: SidebarContext.tsx  ThemeProvider.tsx
client/src/lib/: mockData.ts
client/src/types/: ojt.ts
